dont show output for veris

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 1,
    "outputs": [
     {
      "name": "stdout",
@@ -32,66 +32,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading schema\n",
-      "Loading JSON files to DataFrame.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 8543/8543 [00:31<00:00, 270.77it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Finished loading JSON files to dataframe.\n",
-      "Dropped 5 rows with duplicated incident_id values.\n",
-      "Building DataFrame with enumerations.\n",
-      "Building enumeration columns.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  5%|▌         | 9/173 [00:00<00:02, 66.18it/s]c:\\users\\raheel\\appdata\\local\\programs\\python\\python37\\lib\\site-packages\\verispy\\veris.py:196: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead.  To get a de-fragmented frame, use `newframe = frame.copy()`\n",
-      "  comb_df[newvarname] = raw_df[col].apply(lambda x: var_amt_enum_checker(x, item, variety_or_amt))\n",
-      "c:\\users\\raheel\\appdata\\local\\programs\\python\\python37\\lib\\site-packages\\verispy\\veris.py:190: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead.  To get a de-fragmented frame, use `newframe = frame.copy()`\n",
-      "  comb_df[newvarname] = raw_df[col].apply(lambda x: enum_checker(x, item))\n",
-      "c:\\users\\raheel\\appdata\\local\\programs\\python\\python37\\lib\\site-packages\\verispy\\veris.py:198: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead.  To get a de-fragmented frame, use `newframe = frame.copy()`\n",
-      "  comb_df[col] = raw_df[col]\n",
-      "100%|██████████| 173/173 [00:09<00:00, 18.59it/s]\n",
-      "c:\\users\\raheel\\appdata\\local\\programs\\python\\python37\\lib\\site-packages\\verispy\\veris.py:206: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead.  To get a de-fragmented frame, use `newframe = frame.copy()`\n",
-      "  comb_df[var] = False\n",
-      "c:\\users\\raheel\\appdata\\local\\programs\\python\\python37\\lib\\site-packages\\verispy\\veris.py:215: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead.  To get a de-fragmented frame, use `newframe = frame.copy()`\n",
-      "  comb_df[varname] = None\n",
-      "c:\\users\\raheel\\appdata\\local\\programs\\python\\python37\\lib\\site-packages\\verispy\\veris.py:219: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead.  To get a de-fragmented frame, use `newframe = frame.copy()`\n",
-      "  comb_df[varname] = None\n",
-      "c:\\users\\raheel\\appdata\\local\\programs\\python\\python37\\lib\\site-packages\\verispy\\veris.py:217: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead.  To get a de-fragmented frame, use `newframe = frame.copy()`\n",
-      "  comb_df[varname] = np.nan\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Done building DataFrame with enumerations.\n",
-      "Post-Processing DataFrame (A4 Names, Victim Industries, Patterns)\n",
-      "Finished building VERIS DataFrame\n"
-     ]
-    }
-   ],
+   "execution_count": 16,
+   "outputs": [],
    "source": [
-    "veris_df = v.json_to_df(verbose=True)"
+    "%%capture\n",
+    "veris_df = v.json_to_df();"
    ],
    "metadata": {
     "collapsed": false,
@@ -126,13 +71,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
    "outputs": [
     {
      "data": {
       "text/plain": "<AxesSubplot:title={'center':'Number of incidents for each action type'}, xlabel='Action type', ylabel='Number of incidents'>"
      },
-     "execution_count": 33,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -174,13 +119,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "outputs": [
     {
      "data": {
       "text/plain": "<AxesSubplot:title={'center':'Number of asset type compromised for incidents caused by physical means'}, xlabel='Asset type', ylabel='Number of incidents'>"
      },
-     "execution_count": 31,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -223,13 +168,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "outputs": [
     {
      "data": {
       "text/plain": "<AxesSubplot:title={'center':'Number of asset type compromised for incidents caused by hacking'}, xlabel='Asset type', ylabel='Number of incidents'>"
      },
-     "execution_count": 30,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -272,13 +217,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 6,
    "outputs": [
     {
      "data": {
       "text/plain": "<AxesSubplot:title={'center':'Number of asset type compromised for incidents caused by social means'}, xlabel='Asset type', ylabel='Number of incidents'>"
      },
-     "execution_count": 34,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -321,13 +266,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 7,
    "outputs": [
     {
      "data": {
       "text/plain": "<AxesSubplot:title={'center':'Number of asset type compromised for incidents caused by error'}, xlabel='Asset type', ylabel='Number of incidents'>"
      },
-     "execution_count": 35,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -370,13 +315,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 8,
    "outputs": [
     {
      "data": {
       "text/plain": "<AxesSubplot:title={'center':'Number of asset type compromised for incidents caused by environmental damages'}, xlabel='Asset type', ylabel='Number of incidents'>"
      },
-     "execution_count": 36,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -431,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 9,
    "outputs": [
     {
      "data": {
@@ -472,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 10,
    "outputs": [
     {
      "data": {
@@ -513,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 11,
    "outputs": [
     {
      "data": {
@@ -554,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 12,
    "outputs": [
     {
      "data": {
@@ -595,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 13,
    "outputs": [
     {
      "data": {
